--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_APP_URL=http://localhost:3000
+# VITE_APP_URL=http://localhost:3000
+VITE_APP_URL=https://image-app-1234-039c3f1a4e70.herokuapp.com
